test/ClangImporter/missing-overlay.code
// RUN: %empty-directory(%t)

// RUN: %target-language-frontend -emit-module -parse-as-library %S/Inputs/overlay.code -sdk %S/Inputs -I %S/Inputs/custom-modules -module-name ClangModuleWithOverlay -o %t
// RUN: %target-language-frontend %s -sdk %S/Inputs -I %S/Inputs/custom-modules -I %t -typecheck
// RUN: %target-language-frontend %s -I %t -typecheck -show-diagnostics-after-fatal -verify

// When run without the underlying SDK, we should get an error here.
import ClangModuleWithOverlay // expected-error{{cannot load underlying module for 'ClangModuleWithOverlay'}}
